# _portfolio

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  portfolio_data.txt
app/: main.py
app/domain/: entities.py  schemas.py
app/infrastructure/celery/: email_service.py  worker.py
app/infrastructure/config/: settings.py
app/infrastructure/db/: repositories.py  session.py
app/infrastructure/redis/: otp_store.py
app/interfaces/api/: dependencies.py  main.py
app/interfaces/api/routers/: contact.py
backend/: Dockerfile  drop_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fbf1d545fc0_initial_schema.py
backend/app/: celery_worker.py  main.py  seed.py  seed_real_data.py
backend/app/domain/: entities.py  interfaces.py  schemas.py
backend/app/infrastructure/background_tasks/: email_service.py
backend/app/infrastructure/celery/: tasks.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/db/: models.py  repositories.py  session.py
backend/app/infrastructure/redis/: otp_store.py
backend/app/interfaces/api/: dependencies.py  main.py
backend/app/interfaces/api/routers/: auth.py  contact.py  portfolio.py  users.py
backend/app/use_cases/: auth_use_cases.py  portfolio_use_cases.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/public/: _headers  serve.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: Background3D.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
(+5 files in other folders)
