[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI Backend for Developer Portfolio and CMS"
authors = ["Admin <admin@mandell.tech>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
redis = "^5.0.3"
celery = "^5.3.6"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
